[gd_scene load_steps=18 format=3 uid="uid://dq31h23xkadsa"]

[ext_resource type="Script" path="res://scene/title/title.gd" id="1_0c4bm"]
[ext_resource type="Script" path="res://object/snake/title_snake.gd" id="1_echnt"]
[ext_resource type="Script" path="res://object/particle/splash_spawner.gd" id="2_63tu2"]
[ext_resource type="Script" path="res://render/grid_renderer.gd" id="2_i3u45"]
[ext_resource type="FontFile" uid="uid://b7sdg80udjhpk" path="res://font/consola.ttf" id="3_2yfjk"]
[ext_resource type="Resource" uid="uid://blif4rg51wlvr" path="res://object/particle/title_splash.tres" id="3_sr10y"]
[ext_resource type="Resource" uid="uid://dsrxy1osx2oyi" path="res://render/title_grid.tres" id="4_a0jb1"]
[ext_resource type="Script" path="res://ui/start_cursor.gd" id="5_8gx6m"]
[ext_resource type="Script" path="res://ui/start_word.gd" id="7_6vkq6"]
[ext_resource type="Script" path="res://ui/start_bar.gd" id="7_22wil"]
[ext_resource type="FontVariation" uid="uid://ks11ym86ydqj" path="res://font/cursor_display.tres" id="8_7dms6"]
[ext_resource type="FontVariation" uid="uid://b0nb7fckni6g4" path="res://font/word_display.tres" id="10_snugp"]
[ext_resource type="Script" path="res://ui/background.gd" id="12_8ckxr"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="16_vdet0"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="17_bgg2m"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="18_wj27m"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="19_gt0wy"]

[node name="Title" type="Node" node_paths=PackedStringArray("state_chart", "grid_renderer")]
script = ExtResource("1_0c4bm")
state_chart = NodePath("StateChart")
grid_renderer = NodePath("GridRenderer")

[node name="GridRenderer" type="Node2D" parent="."]
script = ExtResource("2_i3u45")
font = ExtResource("3_2yfjk")
grid = ExtResource("4_a0jb1")

[node name="SplashSpawner" type="Node2D" parent="." node_paths=PackedStringArray("title_snake")]
script = ExtResource("2_63tu2")
grid = ExtResource("4_a0jb1")
title_snake = NodePath("../TitleSnake")
title_splash = ExtResource("3_sr10y")

[node name="TitleSnake" type="Node2D" parent="."]
script = ExtResource("1_echnt")
tick_time = 0.2
horizontal_moves = 4
vertical_moves = 3
grid = ExtResource("4_a0jb1")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 772.0
offset_right = 768.0
offset_bottom = 1144.0

[node name="StartBar" type="ColorRect" parent="HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 135.0
grow_horizontal = 2
script = ExtResource("7_22wil")
color_type = 2

[node name="Margins" type="MarginContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 321.0
grow_horizontal = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 64

[node name="Start" type="CenterContainer" parent="HUD/Margins"]
layout_mode = 2
size_flags_vertical = 0

[node name="Cursor" type="Label" parent="HUD/Margins/Start"]
z_index = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("8_7dms6")
theme_override_font_sizes/font_size = 128
text = "        â–ˆ    "
script = ExtResource("5_8gx6m")
on_color = 1
off_color = 2

[node name="StartWord" type="Label" parent="HUD/Margins/Start"]
z_index = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("10_snugp")
theme_override_font_sizes/font_size = 128
text = "start"
script = ExtResource("7_6vkq6")
normal_color = 1
flash_color = 3

[node name="Background" type="ColorRect" parent="."]
z_index = -5
offset_right = 768.0
offset_bottom = 1152.0
script = ExtResource("12_8ckxr")
color_type = 2

[node name="StateChart" type="Node" parent="."]
script = ExtResource("16_vdet0")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("17_bgg2m")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root"]
script = ExtResource("18_wj27m")

[node name="ToStarting" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("19_gt0wy")
to = NodePath("../../Starting")
event = &"press_start"
delay_in_seconds = "0.0"

[node name="Starting" type="Node" parent="StateChart/Root"]
script = ExtResource("18_wj27m")

[connection signal="state_entered" from="StateChart/Root/Starting" to="." method="_on_starting_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Starting" to="HUD/Margins/Start/Cursor" method="_on_starting_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Starting" to="HUD/Margins/Start/StartWord" method="_on_starting_state_entered"]
